tests/valid/test09_reasignacion.ml
// Test 09: Reasignación de variable
x = 1;
x = x + 1;
x = x * 2;
print(x);
