tests/errors/err01_variable_no_declarada.ml
// Error 01: Variable no declarada
x = 10;
z = x + y;
print(z);
